# pseudo-lab

./: README.md  custom_env.py  dataset_infomation.md  pyproject.toml  run.py  workflow.md
data/teleop_demos/: demo_0001_20260423_220705.hdf5  demo_0001_20260423_222554.hdf5  demo_0002_20260423_220747.hdf5  demo_0002_20260423_222642.hdf5  demo_0003_20260423_220814.hdf5  demo_0004_20260423_220830.hdf5  demo_0005_20260423_220853.hdf5
