[project]
name = "pseudo-lab"
version = "0.1.0"
description = "Keyboard teleoperation demo collection for a custom robosuite PickPlace environment."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "h5py>=3.0",
    "mujoco==3.6.0",
    "numpy>=1.26",
    "pynput>=1.7",
    "robosuite==1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
